--- a/package.json
+++ b/package.json
@@ -1,16 +1,20 @@
 {
   "name": "cumulocity-device-control-plugin",
-  "version": "1.0.0-beta",
+  "version": "1.0.0",
   "description": "This Device Control widget allows to display and control devices and groups of devices.",
   "scripts": {
     "start": "c8ycli server",
-    "build": "c8ycli build",
+    "build": "c8ycli build --env.mode=production",
     "deploy": "c8ycli deploy",
     "postinstall": "ngcc",
     "prebuild": " gulp clean",
     "postbuild": " gulp bundle"
   },
-  "keywords": [],
+  "keywords": [
+    "Cumulocity",
+    "Plugin",
+    "Widget"
+  ],
   "author": "Sabreen Irfana- Software AG, Global Presales",
   "license": "Apache-2.0",
   "dependencies": {
@@ -59,8 +63,8 @@
     "application": {
       "name": "Cumulocity Device Control Widget Plugin",
       "description": "This Device Control widget allows to display and control devices and groups of devices.",
-      "contextPath": "device-control-widget",
-      "key": "device-control-widget-application-key",
+      "contextPath": "sag-ps-pkg-device-control-widget",
+      "key": "sag-ps-pkg-device-control-widget-application-key",
       "globalTitle": "This Device Control widget allows to display and control devices and groups of devices.",
       "tabsHorizontal": true,
       "isPackage": true,
@@ -82,10 +86,64 @@
         "widget-plugin": [
           "DeviceControlWidgetModule"
         ]
+      },
+    "copy": [
+      {
+        "from": "images/device.png",
+        "to": "images/device.png"
+      },
+      {
+        "from": "images/initialoptions.png",
+        "to": "images/initialoptions.png"
+      },
+      {
+        "from": "images/choosedevices.gif",
+        "to": "images/choosedevices.gif"
+      },
+      {
+        "from": "images/chooseicon.gif",
+        "to": "images/chooseicon.gif"
+      },
+      {
+        "from": "images/operations.gif",
+        "to": "images/operations.gif"
+      },
+      {
+        "from": "images/toggle.gif",
+        "to": "images/toggle.gif"
+      },
+      {
+        "from": "images/toggleworking.gif",
+        "to": "images/toggleworking.gif"
+      },
+      {
+        "from": "images/templatedashboard.png",
+        "to": "images/templatedashboard.png"
+      },
+      {
+        "from": "images/groupdashboard.png",
+        "to": "images/groupdashboard.png"
+      },
+      {
+        "from": "images/grouptemplate.gif",
+        "to": "images/grouptemplate.gif"
+      },
+      {
+        "from": "images/grouplinks.gif",
+        "to": "images/grouplinks.gif"
+      },
+      {
+        "from": "images/filter.gif",
+        "to": "images/filter.gif"
+      },
+      {
+        "from": "LICENSE",
+        "to": "LICENSE.txt"
       }
-    },
-    "cli": {}
+    ]
   },
+  "cli": {}
+},
   "browserslist": [
     "last 2 major versions"
   ]
